--- a/package.json
+++ b/package.json
@@ -13,13 +13,16 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
     "@hookform/resolvers": "^5.1.1",
+    "@lottiefiles/dotlottie-react": "^0.14.3",
     "@mui/icons-material": "^7.2.0",
     "@mui/material": "^7.2.0",
     "date-fns": "^4.1.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.60.0",
-    "zod": "^4.0.5"
+    "react-router-dom": "^7.7.0",
+    "zod": "^4.0.5",
+    "zustand": "^5.0.6"
   },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
