--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.60.0",
+    "react-markdown": "^10.1.0",
     "react-router-dom": "^7.7.0",
     "zod": "^4.0.5",
     "zustand": "^5.0.6"
