--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "react-to-insurance",
+  "name": "insura",
   "private": true,
-  "version": "0.0.0",
+  "version": "1.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -12,17 +12,14 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
-    "@hookform/resolvers": "^5.1.1",
     "@lottiefiles/dotlottie-react": "^0.14.3",
     "@mui/icons-material": "^7.2.0",
     "@mui/material": "^7.2.0",
-    "date-fns": "^4.1.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.60.0",
     "react-markdown": "^10.1.0",
     "react-router-dom": "^7.7.0",
-    "zod": "^4.0.5",
     "zustand": "^5.0.6"
   },
   "devDependencies": {
@@ -30,6 +27,7 @@
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
     "@vitejs/plugin-react": "^4.6.0",
+    "depcheck": "^1.4.7",
     "eslint": "^9.30.1",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
